fix the jcifs.properties to have defaults that are compatible with our version of jcifs.  :)
Also, I've made a request to maven to add the latest release of jcifs, here:

  http://jira.codehaus.org/browse/MAVENUPLOAD-1646

--- a/opennms-daemon/src/main/filtered/etc/jcifs.properties
+++ b/opennms-daemon/src/main/filtered/etc/jcifs.properties
@@ -3,99 +3,107 @@
 #                                                                               #
 # Note: Lines beginning with a '#' or a '#' are treated as comments             #
 #################################################################################
-# jcifs.properties,v 1.1.1.1 2001/11/11 17:24:47 ben Exp       
 #
 ################################################################################
-# What to log to the console
-# NON - nothing
-# EXC - exceptions
-# DEB - debug
-# WAR - warnings
-# HEX - hex dumps of network packets
-# ALL - all of the above and more
+# An integer specifying the verbosity of log messages. Higher values are more
+# verbose
+# 0 - No log messages are printed -- not even crticial exceptions.
+# 1 - The default level. Only critical messages are logged.
+# 2 - Hightened log messages suitable for logging while under load.
+# 3 - Almost everything.
+# N - Debugging only.
 ################################################################################
-jcifs.util.log = EXC
+jcifs.util.loglevel = 1
 
 ################################################################################
-# (Optional) IP address of the WINS server.  Only required if accessing hosts
-# on different subnets.
+# (Optional) The IP address of the WINS server. This is only required when
+# accessing hosts on different subnets although it is recommended if a WINS
+# server is provided.
 ################################################################################
-jcifs.netbios.nameserver =
+jcifs.netbios.wins =
  
 ################################################################################
 # (Optional) The path to an lmhosts file containing a map of IP addresses to 
-# hostnames. The format of this file is identical to that of the Windows 
-# lmhosts file format. 
+# hostnames.  The format of this file is identical to that of the Windows
+# lmhosts file format. See Setting Name Resoultion Properties for details.
 ################################################################################
 jcifs.netbios.lmhosts =
- 
-################################################################################
-# A comma separated list of name resolution method identifiers that
-# specify which methods will be used and in what order to resolve hostnames.
-# The possible identifiers are LMHOSTS, WINS, BCAST, and DNS.
-################################################################################
-jcifs.netbios.resolveOrder = WINS,BCAST
 
 ################################################################################
-# (Optional) Although rare, NetBIOS provides for a 'scope id' to be used in an attempt to 
-# conceal groups of machines on the same network.  If scope id is used it must
-# be specified using this property or name queries will fail.
+# A comma separated list of name resolution method identifiers that specify
+# which methods will be used and in what order to resolve hostnames.  The
+# possible identifiers in default order are LMHOSTS, WINS, BCAST, and DNS.
+# See Setting Name Resoultion Properties for details, at:
+#   http://jcifs.samba.org/src/docs/resolver.html
+################################################################################
+jcifs.netbios.resolveOrder = LMHOSTS,WINS,BCAST,DNS
+
+################################################################################
+# (Optional) This is rare but NetBIOS provides for a "scope id" to be used in
+# an attempt to conceal groups of machines on the same network. Ask your
+# network administrator if scope id is used. If so, it must be set using this
+# property or name queries will fail.
 ################################################################################
 jcifs.netbios.scope =
 
 ################################################################################
-# (Optional) The ip address of the local interface the client should bind to 
-# for name queries if it is different from the default. 
+# (Optional) The IP address of the local interface the client should bind to 
+# for name queries if it is different from the default.
 ################################################################################
 jcifs.netbios.laddr =
  
 ################################################################################
-# Local network's broadcast address (used in NetBIOS name queries).
-# It may be necessary to set this for certain network configurations because
-# the default of '255.255.255.255' may otherwise throw a "Network is
-# unreachable" IO Exception.
-################################################################################
-jcifs.netbios.baddr = 255.255.255.255 
-
-################################################################################
-# Cache policy in seconds (0='no caching', -1='forever')
+# When a NetBIOS name is resolved with the NbtAddress class it is cached to
+# reduce redundant name queries.  This property controls how long, in seconds,
+# these names are cached.  The default is 30 seconds, 0 is no caching, and -1
+# is forever.
 ################################################################################
 jcifs.netbios.cachePolicy = 30
 
 ################################################################################
-# NetBIOS name associated with the jCIFS client
+# This property will force port 139 rather than the default port 445.
+# Normally a CIFS client connecting to port 139 must present a NetBIOS name
+# for itself to the server.  JCIFS dynamically generates a name (e.g.
+# JCIFS35_177_E6) for this purpose however it may be desirable to set this
+# property to a specific name (e.g. PROD_FEED3) for reasons such as server
+# accounting purposes.
 ################################################################################
-jcifs.netbios..hostname = OpenNMS_DP
+#jcifs.netbios.hostname = OpenNMS_DP
 
 ################################################################################
-# Number of times to retry if no response received (default is 2)
+# The number of times a name query should be attempted if no answer is
+# received.  In adverse network conditions one may wish to increase this value
+# however failed name queries take retryCount * retryTimeout milliseconds.
+# The default value is 2.  Generally, you should probably increase
+# jcifs.netbios.retryTimeout instead.
 ################################################################################
 jcifs.netbios.retryCount = 3
 
 ################################################################################
-# How long to wait for for a response to a name query (in milliseconds, default is 3000ms)
+# The duration in milliseconds that the client will wait for a response to a
+# name query. The default is 3000.
 ################################################################################
 jcifs.netbios.retryTimeout = 2000
 
 ################################################################################
-# Default username if none specified in the SMB url
+# The default username used if not specified in an SMB URL
 ################################################################################
 jcifs.smb.client.username = guest
 
 ################################################################################
-# Default password if none specified in the SMB url
+# The default password used if not specified in an SMB URL
 ################################################################################
 jcifs.smb.client.password =
 
 ################################################################################
-# Default domain if none specified in the SMB url
+# The default authentication domain used if not specified in an SMB URL
 ################################################################################
 jcifs.smb.client.domain =
 
 ################################################################################
-# (Optional) The ip address of the local interface the client should bind to
-# if it is different from the default. For example if the client is to be
-# used over a dial-up connection the ip address of the PPP interface may need
-# to be specified with this property.
+# (Optional) The IP address of the local interface the client should bind to
+# if it is different from the default.  For example if the client is to be used
+# over a dial-up connection the IP address of the PPP interface may need to be
+# specified with this property.
 ################################################################################
 jcifs.smb.client.laddr =
