guess the jcifs documentation guy had a few typos  :)

--- a/opennms-daemon/src/main/filtered/etc/jcifs.properties
+++ b/opennms-daemon/src/main/filtered/etc/jcifs.properties
@@ -7,9 +7,9 @@
 ################################################################################
 # An integer specifying the verbosity of log messages. Higher values are more
 # verbose
-# 0 - No log messages are printed -- not even crticial exceptions.
+# 0 - No log messages are printed -- not even critical exceptions.
 # 1 - The default level. Only critical messages are logged.
-# 2 - Hightened log messages suitable for logging while under load.
+# 2 - Heightened log messages suitable for logging while under load.
 # 3 - Almost everything.
 # N - Debugging only.
 ################################################################################
@@ -25,7 +25,7 @@ jcifs.netbios.wins =
 ################################################################################
 # (Optional) The path to an lmhosts file containing a map of IP addresses to 
 # hostnames.  The format of this file is identical to that of the Windows
-# lmhosts file format. See Setting Name Resoultion Properties for details.
+# lmhosts file format. See Setting Name Resolution Properties for details.
 ################################################################################
 jcifs.netbios.lmhosts =
 
@@ -33,7 +33,7 @@ jcifs.netbios.lmhosts =
 # A comma separated list of name resolution method identifiers that specify
 # which methods will be used and in what order to resolve hostnames.  The
 # possible identifiers in default order are LMHOSTS, WINS, BCAST, and DNS.
-# See Setting Name Resoultion Properties for details, at:
+# See Setting Name Resolution Properties for details, at:
 #   http://jcifs.samba.org/src/docs/resolver.html
 ################################################################################
 jcifs.netbios.resolveOrder = LMHOSTS,WINS,BCAST,DNS
