by default, comment everything out

--- a/opennms-daemon/src/main/filtered/etc/jcifs.properties
+++ b/opennms-daemon/src/main/filtered/etc/jcifs.properties
@@ -20,14 +20,14 @@ jcifs.util.loglevel = 1
 # accessing hosts on different subnets although it is recommended if a WINS
 # server is provided.
 ################################################################################
-jcifs.netbios.wins =
+#jcifs.netbios.wins =
  
 ################################################################################
 # (Optional) The path to an lmhosts file containing a map of IP addresses to 
 # hostnames.  The format of this file is identical to that of the Windows
 # lmhosts file format. See Setting Name Resolution Properties for details.
 ################################################################################
-jcifs.netbios.lmhosts =
+#jcifs.netbios.lmhosts =
 
 ################################################################################
 # A comma separated list of name resolution method identifiers that specify
@@ -36,7 +36,7 @@ jcifs.netbios.lmhosts =
 # See Setting Name Resolution Properties for details, at:
 #   http://jcifs.samba.org/src/docs/resolver.html
 ################################################################################
-jcifs.netbios.resolveOrder = LMHOSTS,WINS,BCAST,DNS
+#jcifs.netbios.resolveOrder = LMHOSTS,WINS,BCAST,DNS
 
 ################################################################################
 # (Optional) This is rare but NetBIOS provides for a "scope id" to be used in
@@ -44,13 +44,13 @@ jcifs.netbios.resolveOrder = LMHOSTS,WINS,BCAST,DNS
 # network administrator if scope id is used. If so, it must be set using this
 # property or name queries will fail.
 ################################################################################
-jcifs.netbios.scope =
+#jcifs.netbios.scope =
 
 ################################################################################
 # (Optional) The IP address of the local interface the client should bind to 
 # for name queries if it is different from the default.
 ################################################################################
-jcifs.netbios.laddr =
+#jcifs.netbios.laddr =
  
 ################################################################################
 # When a NetBIOS name is resolved with the NbtAddress class it is cached to
@@ -58,7 +58,7 @@ jcifs.netbios.laddr =
 # these names are cached.  The default is 30 seconds, 0 is no caching, and -1
 # is forever.
 ################################################################################
-jcifs.netbios.cachePolicy = 30
+#jcifs.netbios.cachePolicy = 30
 
 ################################################################################
 # This property will force port 139 rather than the default port 445.
@@ -77,28 +77,28 @@ jcifs.netbios.cachePolicy = 30
 # The default value is 2.  Generally, you should probably increase
 # jcifs.netbios.retryTimeout instead.
 ################################################################################
-jcifs.netbios.retryCount = 3
+#jcifs.netbios.retryCount = 3
 
 ################################################################################
 # The duration in milliseconds that the client will wait for a response to a
 # name query. The default is 3000.
 ################################################################################
-jcifs.netbios.retryTimeout = 2000
+#jcifs.netbios.retryTimeout = 2000
 
 ################################################################################
 # The default username used if not specified in an SMB URL
 ################################################################################
-jcifs.smb.client.username = guest
+#jcifs.smb.client.username = guest
 
 ################################################################################
 # The default password used if not specified in an SMB URL
 ################################################################################
-jcifs.smb.client.password =
+#jcifs.smb.client.password =
 
 ################################################################################
 # The default authentication domain used if not specified in an SMB URL
 ################################################################################
-jcifs.smb.client.domain =
+#jcifs.smb.client.domain =
 
 ################################################################################
 # (Optional) The IP address of the local interface the client should bind to
@@ -106,4 +106,4 @@ jcifs.smb.client.domain =
 # over a dial-up connection the IP address of the PPP interface may need to be
 # specified with this property.
 ################################################################################
-jcifs.smb.client.laddr =
+#jcifs.smb.client.laddr =
