--- a/opennms-icmp/opennms-icmp-api/pom.xml
+++ b/opennms-icmp/opennms-icmp-api/pom.xml
@@ -13,5 +13,9 @@
       <artifactId>opennms-util</artifactId>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.savarese</groupId>
+      <artifactId>rocksaw</artifactId>
+    </dependency>
   </dependencies>
 </project>
