--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>service-registration</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <description>service registration and unregistration</description>
   <scm>
-    <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/mdns/trunk</connection>
-    <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/mdns/trunk</developerConnection>
-    <url>http://opennms.svn.sourceforge.net/viewvc/opennms/mdns/trunk</url>
+    <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/mdns/tags/service-registration-0.1</connection>
+    <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/mdns/tags/service-registration-0.1</developerConnection>
+    <url>http://opennms.svn.sourceforge.net/viewvc/opennms/mdns/tags/service-registration-0.1</url>
   </scm>
   <build>
     <plugins>
@@ -106,4 +105,3 @@
     </site>
   </distributionManagement>
 </project>
-
