--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
   </repositories>
   <dependencies>
     <dependency>
+      <groupId>com.apple</groupId>
+      <artifactId>dnssd</artifactId>
+      <version>108.4</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.1</version>
