--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
       <groupId>com.apple</groupId>
       <artifactId>dnssd</artifactId>
       <version>108.4</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
