--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opennms</groupId>
   <artifactId>service-registration</artifactId>
-  <version>0.2</version>
+  <version>0.3-SNAPSHOT</version>
   <description>service registration and unregistration</description>
   <scm>
-    <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-discovery/tags/service-registration-0.2</connection>
-    <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-discovery/tags/service-registration-0.2</developerConnection>
-    <url>http://opennms.svn.sourceforge.net/viewvc/opennms/service-discovery/tags/service-registration-0.2</url>
+    <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-discovery/trunk</connection>
+    <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-discovery/trunk</developerConnection>
+    <url>http://opennms.svn.sourceforge.net/viewvc/opennms/service-discovery/trunk</url>
   </scm>
   <build>
     <plugins>
