--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,7 @@
   <artifactId>service-registration</artifactId>
   <version>0.3-SNAPSHOT</version>
   <description>service registration and unregistration</description>
+  <name>Service Registration for Applications</name
   <scm>
     <connection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-registration/trunk</connection>
     <developerConnection>scm:svn:https://opennms.svn.sourceforge.net/svnroot/opennms/service-registration/trunk</developerConnection>
