--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
     <site>
       <id>opennms-site</id>
       <name>OpenNMS Build Website</name>
-      <url>scpexe://repo.opennms.org/var/www/sites/opennms.org/site/repo/sites/service-registration/${project.version}/</url>
+      <url>scpexe://repo.opennms.org/var/www/sites/opennms.org/site/repo/sites/${project.artifactId}/${project.version}/</url>
     </site>
   </distributionManagement>
 </project>
