--- a/dependencies/opennms-acegi/pom.xml
+++ b/dependencies/opennms-acegi/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>dependencies</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.5.90-SNAPSHOT</version>
+    <version>1.5.91-ackd-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-acegi</artifactId>
