--- a/mock-snmp-agent/pom.xml
+++ b/mock-snmp-agent/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.5.90-SNAPSHOT</version>
+    <version>1.5.91-ackd-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mock-snmp-agent</artifactId>
