--- a/opennms-daemon/pom.xml
+++ b/opennms-daemon/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.5.91-ackd-SNAPSHOT</version>
+    <version>1.5.90-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-daemon</artifactId>
