--- a/opennms-rrd/opennms-rrd-api/pom.xml
+++ b/opennms-rrd/opennms-rrd-api/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>opennms-rrd</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.5.91-ackd-SNAPSHOT</version>
+    <version>1.5.90-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-rrd-api</artifactId>
