--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -115,16 +115,16 @@ free.memory,jvm.thread.count,jvm.thread.daemon,jvm.thread.peak, jboss.http.tp, j
 jboss.servletstatus.time, jboss.servletstatus.cnt, jboss.grp.tp, jboss.grp.time, jboss.grp.cnt, \
 airport.numClients,iisTraffic,iisRequests,exchangeMessages,exchangeBytes, \
 exchangeRecipPartitions,dnsThroughput,mssqlmemory,mssqlusage,mssqlhitratios,mssqllockwaittime, \
-windowsCPU,livecommsusers,livecommsmessages,mailmarshal
-
-
+windowsCPU,livecommsusers,livecommsmessages,mailmarshal, \
+alvarion.droppedrec,alvarion.surb-stats,alvarion.lqi-stats
 
 
 # values available to prefab reports:
 # {rrd1}, {rrd2}, {rrd3}, ...  must match the datasources exactly
 # {startTime}, {endTime}
 # any external values specified per report  
- 
+
+
 # Reports Generated From MIB-2 OIDs
 
 report.mib2.bits.name=Bits In/Out
@@ -664,6 +664,56 @@ report.mib2.storage.usage.command=--title="Storage Utilization on {hrStorageDesc
 #####################################
 ###### Vendor Specific Reports ######
 #####################################
+
+######
+###### Reports for Alvarion Breeze Devices
+######
+
+report.alvarion.droppedrec.name=Dropped/Received on Wireless
+report.alvarion.droppedrec.columns=baVLRecvdBadFrames,baVLTotRxFrmsFrWi
+report.alvarion.droppedrec.type=nodeSnmp
+report.alvarion.droppedrec.command=--title="Dropped/Received on Wireless" \
+ --vertical-label="Frames" \
+ DEF:bad={rrd1}:baVLRecvdBadFrames:AVERAGE \
+ DEF:all={rrd2}:baVLTotRxFrmsFrWi:AVERAGE \
+ CDEF:badPcent=bad,all,/,100,* \
+ AREA:all#0000ff:"Rcvd " \
+ GPRINT:all:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:all:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:all:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:bad#ff0000:"Drop " \
+ GPRINT:bad:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:bad:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:bad:MAX:"Max  \\: %8.2lf %s\\n" \
+ GPRINT:badPcent:AVERAGE:" Percent Dropped \\: %8.0lf%%\\n"
+
+report.alvarion.surb-stats.name=SNR and Link Quality
+report.alvarion.surb-stats.columns=baVLAvgReceiveSNR,baVLReadUpLinkQu
+report.alvarion.surb-stats.type=nodeSnmp
+report.alvarion.surb-stats.command=--title="SNR and Link Quality" \
+ --vertical-label="Stats" \
+ DEF:snr={rrd1}:baVLAvgReceiveSNR:AVERAGE \
+ DEF:lqi={rrd2}:baVLReadUpLinkQu:AVERAGE \
+ CDEF:lqineg=0,lqi,- \
+ AREA:snr#00B157:"SNR " \
+ GPRINT:snr:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:snr:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:snr:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:lqineg#FD9F00:"LQ  " \
+ GPRINT:lqi:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:lqi:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:lqi:MAX:"Max  \\: %8.2lf %s\\n" 
+
+report.alvarion.lqi-stats.name=Link Quality
+report.alvarion.lqi-stats.columns=baVLReadUpLinkQu
+report.alvarion.lqi-stats.type=nodeSnmp
+report.alvarion.lqi-stats.command=--title="Link Quality" \
+ --vertical-label="Range 0-8 (8 is better)" \
+ DEF:lq={rrd1}:baVLReadUpLinkQu:AVERAGE \
+ AREA:lq#FD9F00:"LQ  " \
+ GPRINT:lq:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:lq:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:lq:MAX:"Max  \\: %8.2lf %s\\n"
 
 ######
 ###### Reports for APC UPSs
