--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -92,9 +92,9 @@ netapp.cpu, netapp.fspercent, netapp.fsfiles, \
 netapp.servercall, netapp.cifsrw, netapp.nfsv2rw, netapp.nfsv3rw, \
 netapp.fspercentkbyte, netapp.fskbyte, \
 netapp.fspercentinode, netapp.fsinode, netapp.fsfile, \
-netsnmp.context, netsnmp.hrSystemProcesses, \
+netsnmp.rawcontext, netsnmp.hrSystemProcesses, \
 netsnmp.disk, netsnmp.diskpercent, \
-netsnmp.hrMemory, netsnmp.hrNumUsers, netsnmp.interrupts, \
+netsnmp.hrMemory, netsnmp.hrNumUsers, netsnmp.rawinterrupts, \
 netsnmp.hrSystemUptime, netsnmp.loadavg, netsnmp.swapinout, \
 netBotz.air, netBotz.humid, netBotz.temp, \
 nortel.kernelmem, nortel.kerneltasks, \
@@ -3804,11 +3804,22 @@ report.netapp.fsfile.command=--title="NetApp {naDfFileSys} files" \
 ###### Reports Generated from NET-SNMP agents
 ######
 
-report.netsnmp.context.name=Context
+report.netsnmp.context.name=Context - Deprecated
 report.netsnmp.context.columns=SysContext
 report.netsnmp.context.type=nodeSnmp
-report.netsnmp.context.command=--title="Context" \
+report.netsnmp.context.command=--title="Context (Deprecated Objects)" \
  DEF:context={rrd1}:SysContext:AVERAGE \
+ CDEF:floatc=context,1,/ \
+ LINE2:floatc#0000ff:"Context" \
+ GPRINT:floatc:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floatc:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floatc:MAX:"Max \\: %10.2lf %s\\n" \
+
+report.netsnmp.rawcontext.name=Context
+report.netsnmp.rawcontext.columns=SysRawContext
+report.netsnmp.rawcontext.type=nodeSnmp
+report.netsnmp.rawcontext.command=--title="Context" \
+ DEF:context={rrd1}:SysRawContext:AVERAGE \
  CDEF:floatc=context,1,/ \
  LINE2:floatc#0000ff:"Context" \
  GPRINT:floatc:AVERAGE:"Avg \\: %10.2lf %s" \
@@ -4072,11 +4083,22 @@ report.netsnmp.hrSystemUptime.command=--title="System Uptime" \
  GPRINT:days:MIN:"Min  \\: %8.1lf %s" \
  GPRINT:days:MAX:"Max  \\: %8.1lf %s\\n"
 
-report.netsnmp.interrupts.name=Interrupts
+report.netsnmp.interrupts.name=Interrupts - Deprecated
 report.netsnmp.interrupts.columns=SysInterrupts
 report.netsnmp.interrupts.type=nodeSnmp
-report.netsnmp.interrupts.command=--title="Interrupts" \
+report.netsnmp.interrupts.command=--title="Interrupts (Deprecated Objects)" \
  DEF:interrupts={rrd1}:SysInterrupts:AVERAGE \
+ CDEF:floati=interrupts,1,/ \
+ LINE2:floati#0000ff:"Interrupts" \
+ GPRINT:floati:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:floati:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:floati:MAX:"Max \\: %10.2lf %s\\n" \
+
+report.netsnmp.rawinterrupts.name=Interrupts
+report.netsnmp.rawinterrupts.columns=SysRawInterrupts
+report.netsnmp.rawinterrupts.type=nodeSnmp
+report.netsnmp.rawinterrupts.command=--title="Interrupts" \
+ DEF:interrupts={rrd1}:SysRawInterrupts:AVERAGE \
  CDEF:floati=interrupts,1,/ \
  LINE2:floati#0000ff:"Interrupts" \
  GPRINT:floati:AVERAGE:"Avg \\: %10.2lf %s" \
