--- a/opennms-jetty/pom.xml
+++ b/opennms-jetty/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>opennms</artifactId>
     <groupId>org.opennms</groupId>
-    <version>1.5.90</version>
+    <version>1.5.91-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>opennms-jetty</artifactId>
