--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -178,6 +178,10 @@
     <filter-class>org.extremecomponents.table.filter.ExportFilter</filter-class>
   </filter>
 
+  <filter>
+    <filter-name>httpsRewriteFilter</filter-name>
+    <filter-class>org.opennms.web.filter.HttpsRewriteFilter</filter-class>
+  </filter>
   <!-- WARMERGE: insert filter -->
 
   <filter-mapping>
@@ -295,6 +299,12 @@
   <filter-mapping>
     <filter-name>eXtremeExport</filter-name>
     <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <filter-mapping>
+    <filter-name>httpsRewriteFilter</filter-name>
+    <url-pattern>""</url-pattern>
+    <url-pattern>/</url-pattern>
+    <url-pattern>/frontPage.jsp</url-pattern>
   </filter-mapping>
 
   <!-- WARMERGE: insert filter-mapping -->
