--- a/container/karaf/pom.xml
+++ b/container/karaf/pom.xml
@@ -44,6 +44,7 @@
                         <repository>mvn:org.apache.karaf.features/standard/${karafVersion}/xml/features</repository>
                         <!-- OPENNMS: Replace the spring-legacy features files with our modified versions -->
                         <repository>mvn:org.opennms.karaf/opennms/${project.version}/xml/spring-legacy</repository>
+                        <repository>mvn:org.ops4j.pax.cdi/pax-cdi-features/${paxCdiVersion}/xml/features</repository>
                         <!-- OPENNMS: Add the OpenNMS feature repository -->
                         <repository>mvn:org.opennms.karaf/opennms/${project.version}/xml/features</repository>
                         <!-- OPENNMS: Add the OpenNMS Minion feature repository -->
