--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -84,6 +84,60 @@
               </artifactItems>
             </configuration>
           </execution>
+          <execution>
+            <id>copy-camel-feature</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>org.apache.camel.karaf</groupId>
+                  <artifactId>apache-camel</artifactId>
+                  <version>${camelVersion}</version>
+                  <classifier>features</classifier>
+                  <type>xml</type>
+                  <overWrite>false</overWrite>
+                  <outputDirectory>${project.build.directory}/downloaded-features</outputDirectory>
+                </artifactItem>
+              </artifactItems>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>com.google.code.maven-replacer-plugin</groupId>
+        <artifactId>replacer</artifactId>
+        <version>1.5.3</version>
+        <executions>
+          <execution>
+            <id>exec</id>
+            <phase>package</phase>
+            <goals>
+              <goal>replace</goal>
+            </goals>
+            <configuration>
+              <file>${project.build.directory}/downloaded-features/apache-camel-${camelVersion}-features.xml</file>
+              <replacements>
+                <!-- fix CXF dependency with the weird/bad version and lock it to ours -->
+                <replacement>
+                  <token>apache-cxf/[\d\.]+</token>
+                  <value>apache-cxf/${cxfVersion}</value>
+                </replacement>
+                <!-- fix an issue with resolving multiple versions of spring by forcing the dep to force spring 4.2 -->
+                <replacement>
+                  <token>\[4\.\d,5\)</token>
+                  <value>[4.2,4.3)</value>
+                </replacement>
+                <!-- standardize on the "final" version of jms-api 2.x -->
+                <replacement>
+                  <token>org.apache.geronimo.specs/geronimo-jms_2.0_spec/1.0-alpha-2</token>
+                  <value>javax.jms/javax.jms-api/${jmsApiVersion}</value>
+                </replacement>
+              </replacements>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
       <plugin>
@@ -133,6 +187,11 @@
                   <type>xml</type>
                   <classifier>features</classifier>
                 </artifact>
+                <artifact>
+                  <file>${project.build.directory}/downloaded-features/apache-camel-${camelVersion}-features.xml</file>
+                  <type>xml</type>
+                  <classifier>camel</classifier>
+                </artifact>
               </artifacts>
             </configuration>
           </execution>
@@ -162,6 +221,7 @@
                           <descriptor>file:${project.build.directory}/classes/features-experimental.xml</descriptor>
                           <descriptor>file:${project.build.directory}/classes/features-minion.xml</descriptor>
                           <descriptor>file:${project.build.directory}/classes/features-sentinel.xml</descriptor>
+                          <descriptor>file:${project.build.directory}/downloaded-features/apache-camel-${camelVersion}-features.xml</descriptor>
                           <descriptor>file:${project.build.directory}/classes/karaf-extensions.xml</descriptor>
                           <descriptor>file:${project.build.directory}/classes/spring-legacy.xml</descriptor>
                       </descriptors>
@@ -225,9 +285,23 @@
                           <feature>zookeeper-dependencies</feature>
 
                           <!-- base API features -->
+                          <feature>opennms-activemq-pool</feature>
+                          <feature>opennms-camel-amqp</feature>
+                          <feature>opennms-core-camel</feature>
+                          <feature>opennms-core-daemon</feature>
+                          <feature>opennms-core-ipc-jms</feature>
+                          <feature>opennms-core-ipc-rpc-api</feature>
+                          <feature>opennms-core-ipc-sink-camel-common</feature>
+                          <feature>opennms-core-ipc-sink-camel</feature>
+                          <feature>opennms-core-ipc-sink-camel-server</feature>
+                          <feature>opennms-core-ipc-twin-jms</feature>
+                          <feature>opennms-distributed-core-jms</feature>
+                          <feature>opennms-events-api</feature>
                           <feature>opennms-health</feature>
                           <feature>opennms-health-api</feature>
                           <feature>opennms-newts</feature>
+                          <feature>opennms-poller-monitors-core</feature>
+                          <feature>opennms-telemetry-daemon</feature>
                           <feature>opennms-timeseries-api</feature>
 
                           <!-- minion features -->
@@ -237,7 +311,10 @@
                           <feature>opennms-dao-minion</feature>
                           <feature>opennms-trapd-listener</feature>
 
+                          <!-- sentinel features -->
                           <feature>sentinel-api-layer</feature>
+                          <feature>sentinel-events-forwarder</feature>
+                          <feature>sentinel-jms</feature>
                           <feature>sentinel-timeseries-api</feature>
                       </features>
                       <configuration>file:${project.build.directory}/apache-karaf-${karafVersion}/etc/config.properties</configuration>
