--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -48,7 +48,8 @@
     <skip.surefire.tests>false</skip.surefire.tests>
     <skipITs>true</skipITs>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <camelVersion>2.19.1</camelVersion>
+    <updatePolicy>never</updatePolicy>
+    <camelVersion>2.21.5</camelVersion>
     <groovyVersion>2.5.16</groovyVersion>
     <frontendPluginVersion>0.0.29</frontendPluginVersion>
     <jackson2Version>2.14.2</jackson2Version>
