fixup: more opentracing-noop

--- a/core/tracing/jaeger-osgi/pom.xml
+++ b/core/tracing/jaeger-osgi/pom.xml
@@ -57,6 +57,7 @@
           <instructions>
             <Import-Package>
               io.opentracing.util,
+              io.opentracing.noop,
               io.opentracing,
               io.opentracing.propagation,
               io.opentracing.tag,
