--- a/opennms-container/core/Dockerfile
+++ b/opennms-container/core/Dockerfile
@@ -100,6 +100,7 @@ RUN rm -rf /usr/share/opennms/share/rrd \
 COPY --chown=10001:0 ./container-fs/confd /etc/confd
 COPY --chown=10001:0 ./container-fs/entrypoint.sh /
 COPY --chown=10001:0 ./container-fs/health.sh /
+COPY --chown=10001:0 ./container-fs/ssh-config /usr/share/opennms/.ssh/config
 
 # Allow users in the root group to access them with the same authorization as the directory and file owner
 RUN chmod -R g=u /usr/share/opennms/etc
