--- a/pom.xml
+++ b/pom.xml
@@ -1729,8 +1729,8 @@
     <powermockVersion>2.0.9</powermockVersion>
     <okhttpVersion>4.9.3</okhttpVersion>
     <okioVersion>2.8.0</okioVersion>
-    <opennmsApiVersion>1.3.0</opennmsApiVersion>
-    <opennmsApiVersionOsgi>1.3.0</opennmsApiVersionOsgi>
+    <opennmsApiVersion>1.4.0-SNAPSHOT</opennmsApiVersion>
+    <opennmsApiVersionOsgi>1.4.0</opennmsApiVersionOsgi>
     <osgiVersion>7.0.0</osgiVersion>
     <osgiAnnotationVersion>7.0.0</osgiAnnotationVersion>
     <osgiCompendiumVersion>7.0.0</osgiCompendiumVersion>
