missing javax.xml.bind.JAXBElement in smoke tests because of jersey changes

--- a/smoke-test/pom.xml
+++ b/smoke-test/pom.xml
@@ -957,6 +957,17 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.opennms.dependencies</groupId>
+      <artifactId>jaxb-dependencies</artifactId>
+      <version>${project.version}</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>4.0.0</version>
+    </dependency>
 
     <!-- for m1 -->
     <dependency>
