NMS-15514: Upgrade to Newts 3.0.0
* Upgrades the DataStax Java Driver to 4.15.0 from (3.11.2)
* Upgrades Guava to 31.1-jre (from 25.1-jre)
* Upgrades Dropwizard Metrics to 4.2.10 (from 3.1.2)
* Upgrades Bouncycastle to 1.72 (from 1.68)

--- a/container/features/pom.xml
+++ b/container/features/pom.xml
@@ -131,7 +131,8 @@
       <plugin>
           <groupId>org.apache.karaf.tooling</groupId>
           <artifactId>karaf-maven-plugin</artifactId>
-          <version>${karafVersion}</version>
+          <!-- Use a newer version of the karaf-maven-plugin for better error handling -->
+          <version>4.4.3</version>
           <extensions>true</extensions>
           <configuration>
             <skip>${skipTests}</skip>
@@ -169,8 +170,13 @@
                           <feature>minion-api-layer</feature>
                           <feature>sentinel-api-layer</feature>
                           <feature>sentinel-timeseries-api</feature>
+                          <feature>sentinel-newts</feature>
                           <feature>opennms-timseries-api</feature>
                           <feature>opennms-newts</feature>
+                          <feature>cassandra-driver</feature>
+                          <feature>netty4</feature>
+                          <feature>bouncycastle</feature>
+                          <feature>dropwizard-metrics</feature>
                       </features>
                       <configuration>file:${project.build.directory}/apache-karaf-${karafVersion}/etc/config.properties</configuration>
                   </configuration>
@@ -817,4 +823,12 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+        <id>oss.sonatype.org-snapshot</id>
+        <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        <releases><enabled>false</enabled></releases>
+        <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 </project>
