--- a/container/karaf/src/main/filtered-resources/etc/custom.properties
+++ b/container/karaf/src/main/filtered-resources/etc/custom.properties
@@ -63,6 +63,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         antlr;version=${antlr.version},\
         antlr.collections.impl;version=${antlr.version},\
         com.codahale.metrics;version=${dropwizardMetricsVersion},\
+        com.codahale.metrics.jmx;version=${dropwizardMetricsVersion},\
         com.google.common.annotations;version="${guavaOsgiVersion}",\
         com.google.common.base;version="${guavaOsgiVersion}",\
         com.google.common.cache;version="${guavaOsgiVersion}";uses:="com.google.common.base,com.google.common.collect,com.google.common.util.concurrent",\
@@ -1231,7 +1232,7 @@ org.osgi.framework.system.packages.extra=org.apache.karaf.branding,\
         org.opennms.netmgt.xml.event;version=${opennms.osgi.version},\
         org.opennms.netmgt.xml.eventconf;version=${opennms.osgi.version},\
         org.opennms.netmgt.xml.rtc;version=${opennms.osgi.version},\
-        org.opennms.newts.api;version=${newtsVersion},\
+        org.opennms.newts.api;version=${newtsOsgiVersion},\
         org.opennms.netmgt.config.threshd;version=${opennms.osgi.version},\
         org.opennms.protocols.xml.config;version=${opennms.osgi.version},\
         org.opennms.reporting.core;version=${opennms.osgi.version},\
