--- a/dependencies/newts/pom.xml
+++ b/dependencies/newts/pom.xml
@@ -54,8 +54,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>com.datastax.cassandra</groupId>
-      <artifactId>cassandra-driver-core</artifactId>
+      <groupId>com.datastax.oss</groupId>
+      <artifactId>java-driver-core</artifactId>
       <version>${cassandraVersion}</version>
     </dependency>
     <dependency>
@@ -64,4 +64,12 @@
       <version>2.0.0</version>
     </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+        <id>oss.sonatype.org-snapshot</id>
+        <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        <releases><enabled>false</enabled></releases>
+        <snapshots><enabled>true</enabled></snapshots>
+    </repository>
+  </repositories>
 </project>
