--- a/features/newts/pom.xml
+++ b/features/newts/pom.xml
@@ -85,6 +85,10 @@
       <groupId>com.swrve</groupId>
       <artifactId>rate-limited-logger</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-jmx</artifactId>
+    </dependency>
 
     <!-- Testing -->
     <dependency>
