--- a/opennms-base-assembly/src/main/filtered/etc/opennms.properties
+++ b/opennms-base-assembly/src/main/filtered/etc/opennms.properties
@@ -644,6 +644,7 @@ net.sf.jasperreports.chart.pie.ignore.duplicated.key=true
 # Note that Newts must be enabled using the 'org.opennms.timeseries.strategy' property
 # for these to take effect.
 #
+#org.opennms.newts.config.datacenter=datacenter1
 #org.opennms.newts.config.hostname=localhost
 #org.opennms.newts.config.keyspace=newts
 #org.opennms.newts.config.port=9042
