--- a/core/ipc/rpc/camel/pom.xml
+++ b/core/ipc/rpc/camel/pom.xml
@@ -53,6 +53,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-jmx</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.opennms.core</groupId>
       <artifactId>org.opennms.core.camel</artifactId>
     </dependency>
