--- a/core/ipc/sink/common/pom.xml
+++ b/core/ipc/sink/common/pom.xml
@@ -116,8 +116,7 @@
     </dependency>
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-      <version>${dropwizardMetricsVersion}</version>
+      <artifactId>metrics-jmx</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opennms.core.test-api</groupId>
