--- a/features/distributed/distributed-cassandra/cassandra-api/pom.xml
+++ b/features/distributed/distributed-cassandra/cassandra-api/pom.xml
@@ -29,8 +29,8 @@
     </build>
     <dependencies>
         <dependency>
-            <groupId>com.datastax.cassandra</groupId>
-            <artifactId>cassandra-driver-core</artifactId>
+            <groupId>com.datastax.oss</groupId>
+            <artifactId>java-driver-core</artifactId>
             <version>${cassandraVersion}</version>
         </dependency>
     </dependencies>
