--- a/features/distributed/kv-store/blob/blob-itests/pom.xml
+++ b/features/distributed/kv-store/blob/blob-itests/pom.xml
@@ -72,5 +72,11 @@
             <type>pom</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.opennms.features.distributed</groupId>
+            <artifactId>org.opennms.features.distributed.cassandra.newts-impl</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
