--- a/opennms-config/pom.xml
+++ b/opennms-config/pom.xml
@@ -78,8 +78,7 @@
     </dependency>
     <dependency>
       <groupId>io.dropwizard.metrics</groupId>
-      <artifactId>metrics-core</artifactId>
-      <version>${dropwizardMetricsVersion}</version>
+      <artifactId>metrics-jmx</artifactId>
     </dependency>
     <dependency>
       <groupId>org.opennms</groupId>
